--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -329,6 +329,7 @@
 <li><a href="mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim" target="classFrame">SimpleLowerBound</a></li>
 <li><a href="mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim" target="classFrame">SimpleUpperBound</a></li>
 <li><a href="mitiv/invpb/SimpleViewer.html" title="class in mitiv.invpb" target="classFrame">SimpleViewer</a></li>
+<li><a href="mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception" target="classFrame">SingularOperatorException</a></li>
 <li><a href="mitiv/array/impl/StriddenByte1D.html" title="class in mitiv.array.impl" target="classFrame">StriddenByte1D</a></li>
 <li><a href="mitiv/array/impl/StriddenByte2D.html" title="class in mitiv.array.impl" target="classFrame">StriddenByte2D</a></li>
 <li><a href="mitiv/array/impl/StriddenByte3D.html" title="class in mitiv.array.impl" target="classFrame">StriddenByte3D</a></li>
