--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -329,6 +329,7 @@
 <li><a href="mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim">SimpleLowerBound</a></li>
 <li><a href="mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim">SimpleUpperBound</a></li>
 <li><a href="mitiv/invpb/SimpleViewer.html" title="class in mitiv.invpb">SimpleViewer</a></li>
+<li><a href="mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception">SingularOperatorException</a></li>
 <li><a href="mitiv/array/impl/StriddenByte1D.html" title="class in mitiv.array.impl">StriddenByte1D</a></li>
 <li><a href="mitiv/array/impl/StriddenByte2D.html" title="class in mitiv.array.impl">StriddenByte2D</a></li>
 <li><a href="mitiv/array/impl/StriddenByte3D.html" title="class in mitiv.array.impl">StriddenByte3D</a></li>
