--- a/index-all.html
+++ b/index-all.html
@@ -14059,6 +14059,10 @@
 <dd>
 <div class="block">Multiply the components of a vector by a constant factor.</div>
 </dd>
+<dt><span class="strong"><a href="./mitiv/linalg/VectorSpace.html#scale(mitiv.linalg.Vector, double, mitiv.linalg.Vector)">scale(Vector, double, Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></dt>
+<dd>
+<div class="block">Multiply the components of a vector by a constant factor.</div>
+</dd>
 <dt><span class="strong"><a href="./mitiv/utils/CommonUtils.html#SCALE">SCALE</a></span> - Static variable in class mitiv.utils.<a href="./mitiv/utils/CommonUtils.html" title="class in mitiv.utils">CommonUtils</a></dt>
 <dd>
 <div class="block">If we want the computed image to be scaled.</div>
@@ -15710,6 +15714,10 @@
 </dd>
 <dt><span class="strong"><a href="./mitiv/linalg/TruncatedConjugateGradient.html#setLeftHandSideOperator(mitiv.linalg.LinearOperator)">setLeftHandSideOperator(LinearOperator)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/TruncatedConjugateGradient.html" title="class in mitiv.linalg">TruncatedConjugateGradient</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#setLeftVector(mitiv.linalg.Vector)">setLeftVector(Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
+<dd>
+<div class="block">Set the left vector of a rank-one linear operator.</div>
+</dd>
 <dt><span class="strong"><a href="./commands/TotalVariationDeconvolution.html#setLimitedMemorySize(int)">setLimitedMemorySize(int)</a></span> - Method in class commands.<a href="./commands/TotalVariationDeconvolution.html" title="class in commands">TotalVariationDeconvolution</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/microscopy/PSF_Estimation.html#setLimitedMemorySize(int)">setLimitedMemorySize(int)</a></span> - Method in class mitiv.microscopy.<a href="./mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy">PSF_Estimation</a></dt>
@@ -15894,6 +15902,10 @@
 </dd>
 <dt><span class="strong"><a href="./mitiv/linalg/TruncatedConjugateGradient.html#setRightHandSideVector(mitiv.linalg.Vector)">setRightHandSideVector(Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/TruncatedConjugateGradient.html" title="class in mitiv.linalg">TruncatedConjugateGradient</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#setRightVector(mitiv.linalg.Vector)">setRightVector(Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
+<dd>
+<div class="block">Set the right vector of a rank-one linear operator.</div>
+</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/LinearConjugateGradient.html#setRtol(double)">setRtol(double)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/LinearConjugateGradient.html" title="class in mitiv.linalg">LinearConjugateGradient</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/WeightGenerator.html#setSaturation(double)">setSaturation(double)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg">WeightGenerator</a></dt>
@@ -15962,10 +15974,6 @@
 </dd>
 <dt><span class="strong"><a href="./mitiv/tests/AdaptativeSteepestDescent.html#setTolerances(double[])">setTolerances(double[])</a></span> - Method in class mitiv.tests.<a href="./mitiv/tests/AdaptativeSteepestDescent.html" title="class in mitiv.tests">AdaptativeSteepestDescent</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#setU(mitiv.linalg.Vector)">setU(Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
-<dd>
-<div class="block">Set the left vector of a rank-one linear operator.</div>
-</dd>
 <dt><span class="strong"><a href="./commands/TotalVariationDeconvolution.html#setUpperBound(double)">setUpperBound(double)</a></span> - Method in class commands.<a href="./commands/TotalVariationDeconvolution.html" title="class in commands">TotalVariationDeconvolution</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/microscopy/PSF_Estimation.html#setUpperBound(double)">setUpperBound(double)</a></span> - Method in class mitiv.microscopy.<a href="./mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy">PSF_Estimation</a></dt>
@@ -15986,10 +15994,6 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/optim/FloatBoxedSet.html#setUpperBound(mitiv.linalg.Vector)">setUpperBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim">FloatBoxedSet</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#setV(mitiv.linalg.Vector)">setV(Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
-<dd>
-<div class="block">Set the right vector of a rank-one linear operator.</div>
-</dd>
 <dt><span class="strong"><a href="./mitiv/utils/reconstruction/ReconstructionThreadToken.html#setValue(int, double)">setValue(int, double)</a></span> - Method in class mitiv.utils.reconstruction.<a href="./mitiv/utils/reconstruction/ReconstructionThreadToken.html" title="class in mitiv.utils.reconstruction">ReconstructionThreadToken</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/cost/GradientChecker.html#setVariables(mitiv.linalg.Vector, boolean)">setVariables(Vector, boolean)</a></span> - Method in class mitiv.cost.<a href="./mitiv/cost/GradientChecker.html" title="class in mitiv.cost">GradientChecker</a></dt>
@@ -16283,6 +16287,12 @@
 <dd>
 <div class="block">Create a simple viewer which prints to a given output stream.</div>
 </dd>
+<dt><a href="./mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception"><span class="strong">SingularOperatorException</span></a> - Exception in <a href="./mitiv/exception/package-summary.html">mitiv.exception</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/exception/SingularOperatorException.html#SingularOperatorException(java.lang.String)">SingularOperatorException(String)</a></span> - Constructor for exception mitiv.exception.<a href="./mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception">SingularOperatorException</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/exception/SingularOperatorException.html#SingularOperatorException()">SingularOperatorException()</a></span> - Constructor for exception mitiv.exception.<a href="./mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception">SingularOperatorException</a></dt>
+<dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/deconv/DeconvUtils.html#sizePadding">sizePadding</a></span> - Variable in class mitiv.deconv.<a href="./mitiv/deconv/DeconvUtils.html" title="class in mitiv.deconv">DeconvUtils</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/base/Traits.html#sizes">sizes</a></span> - Static variable in interface mitiv.base.<a href="./mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a></dt>
@@ -22985,6 +22995,10 @@ the order they are declared.</div>
 </dd>
 <dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#_apply(mitiv.linalg.Vector, int)">_apply(Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/ScaleOperator.html#_apply(mitiv.linalg.Vector, int)">_apply(Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg">ScaleOperator</a></dt>
+<dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/ScaleOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg">ScaleOperator</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/RealComplexFFT.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped">RealComplexFFT</a></dt>
@@ -23110,6 +23124,16 @@ the order they are declared.</div>
 <dt><span class="strong"><a href="./mitiv/optim/SimpleLowerBound.html#_projectVariables(mitiv.linalg.Vector, mitiv.linalg.Vector)">_projectVariables(Vector, Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim">SimpleLowerBound</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/optim/SimpleUpperBound.html#_projectVariables(mitiv.linalg.Vector, mitiv.linalg.Vector)">_projectVariables(Vector, Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim">SimpleUpperBound</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_scale(mitiv.linalg.Vector, double)">_scale(Vector, double)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_scale(mitiv.linalg.Vector, double, mitiv.linalg.Vector)">_scale(Vector, double, Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html#_scale(mitiv.linalg.Vector, double)">_scale(Vector, double)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped">FloatShapedVectorSpace</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html#_scale(mitiv.linalg.Vector, double, mitiv.linalg.Vector)">_scale(Vector, double, Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped">FloatShapedVectorSpace</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/VectorSpace.html#_scale(mitiv.linalg.Vector, double, mitiv.linalg.Vector)">_scale(Vector, double, Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/VectorSpace.html#_scale(mitiv.linalg.Vector, double)">_scale(Vector, double)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></dt>
 <dd>&nbsp;</dd>
