--- a/mitiv/exception/package-summary.html
+++ b/mitiv/exception/package-summary.html
@@ -109,6 +109,10 @@
 <div class="block">Exception thrown when input data does not conform to assumed format but the stream is left as if no data were read.</div>
 </td>
 </tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception">SingularOperatorException</a></td>
+<td class="colLast">&nbsp;</td>
+</tr>
 </tbody>
 </table>
 </li>
