--- a/mitiv/linalg/LinearEndomorphism.html
+++ b/mitiv/linalg/LinearEndomorphism.html
@@ -99,7 +99,7 @@
 <li class="blockList">
 <dl>
 <dt>Direct Known Subclasses:</dt>
-<dd><a href="../../mitiv/linalg/DiagonalOperator.html" title="class in mitiv.linalg">DiagonalOperator</a></dd>
+<dd><a href="../../mitiv/linalg/DiagonalOperator.html" title="class in mitiv.linalg">DiagonalOperator</a>, <a href="../../mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg">ScaleOperator</a></dd>
 </dl>
 <hr>
 <br>
@@ -227,7 +227,7 @@ extends <a href="../../mitiv/linalg/LinearOperator.html" title="class in mitiv.l
 <ul class="blockListLast">
 <li class="blockList">
 <h4>space</h4>
-<pre>protected&nbsp;<a href="../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a> space</pre>
+<pre>protected final&nbsp;<a href="../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a> space</pre>
 </li>
 </ul>
 </li>
