--- a/mitiv/exception/SingularOperatorException.html
+++ b/mitiv/exception/SingularOperatorException.html
@@ -3,13 +3,13 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-<title>RecoverableFormatException</title>
+<title>SingularOperatorException</title>
 <link rel="stylesheet" type="text/css" href="../../stylesheet.css" title="Style">
 </head>
 <body>
 <script type="text/javascript"><!--
     if (location.href.indexOf('is-external=true') == -1) {
-        parent.document.title="RecoverableFormatException";
+        parent.document.title="SingularOperatorException";
     }
 //-->
 </script>
@@ -34,12 +34,12 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/exception/NotImplementedException.html" title="class in mitiv.exception"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/exception/RecoverableFormatException.html" title="class in mitiv.exception"><span class="strong">PREV CLASS</span></a></li>
+<li>NEXT CLASS</li>
 </ul>
 <ul class="navList">
-<li><a href="../../index.html?mitiv/exception/RecoverableFormatException.html" target="_top">FRAMES</a></li>
-<li><a href="RecoverableFormatException.html" target="_top">NO FRAMES</a></li>
+<li><a href="../../index.html?mitiv/exception/SingularOperatorException.html" target="_top">FRAMES</a></li>
+<li><a href="SingularOperatorException.html" target="_top">NO FRAMES</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_top">
 <li><a href="../../allclasses-noframe.html">All Classes</a></li>
@@ -78,7 +78,7 @@
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
 <p class="subTitle">mitiv.exception</p>
-<h2 title="Class RecoverableFormatException" class="title">Class RecoverableFormatException</h2>
+<h2 title="Class SingularOperatorException" class="title">Class SingularOperatorException</h2>
 </div>
 <div class="contentContainer">
 <ul class="inheritance">
@@ -91,7 +91,12 @@
 <li>java.lang.Exception</li>
 <li>
 <ul class="inheritance">
-<li>mitiv.exception.RecoverableFormatException</li>
+<li>java.lang.RuntimeException</li>
+<li>
+<ul class="inheritance">
+<li>mitiv.exception.SingularOperatorException</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -108,12 +113,9 @@
 </dl>
 <hr>
 <br>
-<pre>public class <strong>RecoverableFormatException</strong>
-extends java.lang.Exception</pre>
-<div class="block">Exception thrown when input data does not conform to assumed format but the stream is left as if no data were read.</div>
-<dl><dt><span class="strong">Author:</span></dt>
-  <dd>Éric Thiébaut</dd>
-<dt><span class="strong">See Also:</span></dt><dd><a href="../../serialized-form.html#mitiv.exception.RecoverableFormatException">Serialized Form</a></dd></dl>
+<pre>public class <strong>SingularOperatorException</strong>
+extends java.lang.RuntimeException</pre>
+<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../serialized-form.html#mitiv.exception.SingularOperatorException">Serialized Form</a></dd></dl>
 </li>
 </ul>
 </div>
@@ -132,7 +134,10 @@ extends java.lang.Exception</pre>
 <th class="colOne" scope="col">Constructor and Description</th>
 </tr>
 <tr class="altColor">
-<td class="colOne"><code><strong><a href="../../mitiv/exception/RecoverableFormatException.html#RecoverableFormatException(java.lang.String)">RecoverableFormatException</a></strong>(java.lang.String&nbsp;message)</code>&nbsp;</td>
+<td class="colOne"><code><strong><a href="../../mitiv/exception/SingularOperatorException.html#SingularOperatorException()">SingularOperatorException</a></strong>()</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
+<td class="colOne"><code><strong><a href="../../mitiv/exception/SingularOperatorException.html#SingularOperatorException(java.lang.String)">SingularOperatorException</a></strong>(java.lang.String&nbsp;message)</code>&nbsp;</td>
 </tr>
 </table>
 </li>
@@ -171,13 +176,22 @@ extends java.lang.Exception</pre>
 <!--   -->
 </a>
 <h3>Constructor Detail</h3>
-<a name="RecoverableFormatException(java.lang.String)">
+<a name="SingularOperatorException(java.lang.String)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>SingularOperatorException</h4>
+<pre>public&nbsp;SingularOperatorException(java.lang.String&nbsp;message)</pre>
+</li>
+</ul>
+<a name="SingularOperatorException()">
 <!--   -->
 </a>
 <ul class="blockListLast">
 <li class="blockList">
-<h4>RecoverableFormatException</h4>
-<pre>public&nbsp;RecoverableFormatException(java.lang.String&nbsp;message)</pre>
+<h4>SingularOperatorException</h4>
+<pre>public&nbsp;SingularOperatorException()</pre>
 </li>
 </ul>
 </li>
@@ -205,12 +219,12 @@ extends java.lang.Exception</pre>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/exception/NotImplementedException.html" title="class in mitiv.exception"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/exception/RecoverableFormatException.html" title="class in mitiv.exception"><span class="strong">PREV CLASS</span></a></li>
+<li>NEXT CLASS</li>
 </ul>
 <ul class="navList">
-<li><a href="../../index.html?mitiv/exception/RecoverableFormatException.html" target="_top">FRAMES</a></li>
-<li><a href="RecoverableFormatException.html" target="_top">NO FRAMES</a></li>
+<li><a href="../../index.html?mitiv/exception/SingularOperatorException.html" target="_top">FRAMES</a></li>
+<li><a href="SingularOperatorException.html" target="_top">NO FRAMES</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_bottom">
 <li><a href="../../allclasses-noframe.html">All Classes</a></li>
