--- a/overview-tree.html
+++ b/overview-tree.html
@@ -582,10 +582,10 @@
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/IdentityOperator.html" title="class in mitiv.linalg"><span class="strong">IdentityOperator</span></a></li>
 </ul>
 </li>
+<li type="circle">mitiv.linalg.<a href="mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg"><span class="strong">ScaleOperator</span></a></li>
 </ul>
 </li>
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg"><span class="strong">RankOneOperator</span></a></li>
-<li type="circle">mitiv.linalg.<a href="mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg"><span class="strong">ScaleOperator</span></a></li>
 <li type="circle">mitiv.linalg.shaped.<a href="mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped"><span class="strong">ShapedLinearOperator</span></a> (implements mitiv.base.<a href="mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a>)
 <ul>
 <li type="circle">mitiv.deconv.<a href="mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">Convolution</span></a>
@@ -692,6 +692,7 @@
 <li type="circle">mitiv.exception.<a href="mitiv/exception/IncorrectSpaceException.html" title="class in mitiv.exception"><span class="strong">IncorrectSpaceException</span></a></li>
 <li type="circle">mitiv.exception.<a href="mitiv/exception/NonConformableArrayException.html" title="class in mitiv.exception"><span class="strong">NonConformableArrayException</span></a></li>
 <li type="circle">mitiv.exception.<a href="mitiv/exception/NotImplementedException.html" title="class in mitiv.exception"><span class="strong">NotImplementedException</span></a></li>
+<li type="circle">mitiv.exception.<a href="mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception"><span class="strong">SingularOperatorException</span></a></li>
 </ul>
 </li>
 </ul>
